# nm-configurator

./: Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go  main_test.go
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  release.yml
pkg/config/: config.go
pkg/configurator/: configurator.go  configurator_test.go  network.go
pkg/configurator/testdata/host1/: eth0.nmconnection
pkg/configurator/testdata/host2/: invalid.nmconnection
src/: apply_conf.rs  generate_conf.rs  interfaces.rs  main.rs  types.rs
testdata/: host_config.yaml
testdata/apply/config/: host_config.yaml
testdata/apply/node1/: bond0.nmconnection  br1-br.nmconnection  eth0.1365.nmconnection  eth0.nmconnection  eth1.nmconnection  eth2-port.nmconnection  eth2.nmconnection
testdata/generate/: node1.yaml
testdata/generate/expected/: br1-br.nmconnection  bridge0.nmconnection  eth0.nmconnection  eth1-port.nmconnection  eth1.nmconnection  host_config.yaml  lo.nmconnection  ovs0-if.nmconnection  ovs0-port.nmconnection
testdata/node1.example.com/: eth0.101.nmconnection
testdata/node2.example.com/: eth0.nmconnection
