[package]
name = "nmc"
version = "0.3.3"
edition = "2021"
authors = ["Atanas Dinov <atanas.dinov@suse.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["cargo"] }
env_logger = "0.11.6"
log = "0.4.27"
network-interface = "2.0.3"
nmstate = { version = "2.2.49", features = ["gen_conf"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
configparser = "3.1.0"
